2024-11-03 update swagger, bug fix
- will probably need a client route for site admins
/client/add - to add a new client
/client/update - to update a client
/client/delete - to remove a client
