# backend/routes/api-docs/swaggerOptions.json
@@ -15,7 +15,7 @@
 	},
 	"servers": [
 		{
-			"url": "/"
+			"url": "https://localhost/api/v1"
 		}
 	],
 	"tags": [
@@ -39,35 +39,31 @@
 				"description": "Returns a list of trend data. The list is arranged by date, in ascending order.",
 				"operationId": "listAllMatchingTrends",
 				"produces": ["application/json"],
-				"parameters": [
-					{
-						"name": "region",
-						"in": "body",
-						"required": false,
-						"description": "Local Government Area by id in array. Defaults to all regions if not provided for Local Government Memebers, defaults to the region of the user for Business Members.",
-						"schema": {
-							"type": "array"
-						}
-					},
-					{
-						"name": "type",
-						"in": "body",
-						"required": false,
-						"description": "Type of trend data in array. Options are ['ave_historical_occupancy', 'ave_daily_rate', 'ave_length_stay', 'ave_booking_window']. Defaults to all types if not provided.",
-						"schema": {
-							"type": "array"
-						}
-					},
-					{
-						"name": "dateRange",
-						"in": "body",
-						"required": false,
-						"description": "Date range in the format of an array ['yyyy-mm-dd', 'yyyy-mm-dd']. Defaults to last two years.",
-						"schema": {
-							"type": "array"
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"region": {
+										"type": "array"
+									},
+									"type": {
+										"type": "array"
+									},
+									"dateRange": {
+										"type": "array"
+									}
+								}
+							},
+							"example": {
+								"region": [1, 2],
+								"type": ["ave_historical_occupancy"],
+								"dateRange": ["2024-01-01", "2024-01-31"]
+							}
 						}
 					}
-				],
+				},
 				"responses": {
 					"200": {
 						"description": "An array of objects containing id, date, lga_id, lga_name, ave_historical_occupany, ave_daily_rate, ave_length_stay, ave_booking_window. An example of one object in the array is shown below.",
@@ -202,26 +198,27 @@
 			"post": {
 				"tags": ["User Data"],
 				"description": "Use to request user data, previously imported.",
-				"parameters": [
-					{
-						"name": "type",
-						"in": "body",
-						"required": false,
-						"description": "Type of trend data in array. Options are ['ave_historical_occupancy', 'ave_daily_rate', 'ave_length_stay', 'ave_booking_window']. Defaults to all types if not provided.",
-						"schema": {
-							"type": "array"
-						}
-					},
-					{
-						"name": "dateRange",
-						"in": "body",
-						"required": false,
-						"description": "Date range in the format of an array ['yyyy-mm-dd', 'yyyy-mm-dd']. Defaults to last two years.",
-						"schema": {
-							"type": "array"
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"type": {
+										"type": "array"
+									},
+									"dateRange": {
+										"type": "array"
+									}
+								}
+							},
+							"example": {
+								"type": ["ave_historical_occupancy"],
+								"dateRange": ["2024-01-01", "2024-01-31"]
+							}
 						}
 					}
-				],
+				},
 				"responses": {
 					"200": {
 						"description": "An array of objects containing id, date, lga_id, lga_name, ave_historical_occupany, ave_daily_rate, ave_length_stay, ave_booking_window. An example of one object in the array is shown below.",
@@ -288,7 +285,6 @@
 									"error": false,
 									"message": "Success",
 									"query": {
-										"region": [1, 2],
 										"type": ["ave_historical_occupancy"],
 										"dateRange": ["2024-01-01", "2024-01-31"]
 									},
@@ -356,19 +352,9 @@
 			"post": {
 				"tags": ["User Data"],
 				"description": "Use to add user specific data for comparison to public data.",
-				"parameters": [
-					{
-						"name": "data",
-						"in": "body",
-						"required": true,
-						"schema": {
-							"type": "array"
-						}
-					}
-				],
 				"requestBody": {
 					"content": {
-						"multipart/form-data": {
+						"application/json": {
 							"schema": {
 								"type": "object",
 								"properties": {
@@ -399,6 +385,18 @@
 										}
 									}
 								}
+							},
+							"example": {
+								"data": [
+									{
+										"date": "2024-01-01",
+										"lga_id": 1,
+										"ave_historical_occupancy": 0.7554,
+										"ave_daily_rate": 150,
+										"ave_length_stay": 3,
+										"ave_booking_window": 30
+									}
+								]
 							}
 						}
 					}
@@ -422,6 +420,106 @@
 								"example": {
 									"error": false,
 									"message": "Success"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Invalid query parameters.",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"error": {
+											"type": "boolean"
+										},
+										"message": {
+											"type": "string"
+										}
+									}
+								},
+								"example": {
+									"error": true,
+									"message": "Error."
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Internal server error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"error": {
+											"type": "boolean"
+										},
+										"message": {
+											"type": "string"
+										}
+									}
+								},
+								"example": {
+									"error": true,
+									"message": "Internal Server Error"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/user/trends/delete": {
+			"post": {
+				"tags": ["User Data"],
+				"description": "Use to delete user specific data.",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"toDelete": {
+										"type": "array"
+									}
+								}
+							},
+							"example": {
+								"toDelete": [4, 29, 300]
+							}
+						}
+					},
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"description": "Data successfully deleted.",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"error": {
+											"type": "boolean"
+										},
+										"message": {
+											"type": "string"
+										},
+										"query": {
+											"type": "array"
+										},
+										"deleteCount": {
+											"type": "number"
+										}
+									}
+								},
+								"example": {
+									"error": false,
+									"message": "Success",
+									"query": [4, 29, 300],
+									"deleteCount": 3
 								}
 							}
 						}
