# backend/routes/index.js
@@ -15,43 +15,59 @@ router.use("*", require("../middleware/error/fiveHundred"));
 // reject URL parameters for all routes
 router.use("*", rejectInvalidUrlQueryParams);
 
-// GET Define a simple route to check if our server works
+// POST Define a simple route to check if our server works
 router.get("/helloWorld", verifyJwtAndAddUser, (_, res) => {
 	res.send("Hello World!");
 });
 
-// Swagger UI setup
+// GET Swagger UI setup
 router.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerOptions));
 
-// GET tourism trends
+// POST get tourism trends
 router.use("/trends", verifyJwtAndAddUser, require("./trends/publicData"));
 
-// GET user data
+// POST get user data
 router.use(
 	"/user/trends/get",
 	verifyJwtAndAddUser,
 	require("./user/trends/getData")
 );
 
-// POST userData
+// POST add user data
 router.use(
 	"/user/trends/add",
 	verifyJwtAndAddUser,
 	require("./user/trends/addData")
 );
 
-//  DEL user data
-// #TODO: Implement delete user data
+//  POST delete user data
+router.use(
+	"/user/trends/delete",
+	verifyJwtAndAddUser,
+	require("./user/trends/deleteData")
+);
+
+// POST add a new client #TODO
+// router.use("/client/add", verifyJwtAndAddUser, require("./client/addClient"));
+
+// POST update a client #TODO
 // router.use(
-// 	"/user/trends/delete",
+// 	"/client/update",
 // 	verifyJwtAndAddUser,
-// 	require("./user/trends/deleteData")
+// 	require("./client/updateClient")
+// );
+
+// POST delete a client #TODO
+// router.use(
+// 	"/client/delete",
+// 	verifyJwtAndAddUser,
+// 	require("./client/deleteClient")
 // );
 
 // POST user registration
 router.use(
 	"/user/register",
-	// verifyJwtAndAddUser,
+	verifyJwtAndAddUser,
 	requireEmailAndPassword,
 	require("./user/register")
 );
